@@ -9,6 +9,7 @@
 #' @param maf an \code{\link{MAF}} object generated by \code{\link{read.maf}}
 #' @param top how many top genes to be drawn. defaults to 20.
 #' @param genes Just draw oncoplot for these genes. Default NULL.
+#' @param altered Default FALSE. Chooses top genes based on muatation status. If \code{TRUE} chooses top genes based alterations (CNV or mutation).
 #' @param mutsig Mutsig resuts if availbale. Usually file named sig_genes.txt If provided plots significant genes and correpsonding Q-values as side row-bar. Default NULL.
 #' @param exprsTbl Expression values if availble. Must be a data.frame with two columns containing to gene names and expression values.
 #' @param mutsigQval Q-value to choose significant genes from mutsig results. Default 0.1
@@ -71,7 +72,7 @@
 #' oncoplot(maf = laml, colors = col, clinicalFeatures = 'FAB_classification', sortByAnnotation = TRUE, annotationColor = fabcolors)
 #' @seealso \code{\link{oncostrip}}
 #' @export
-oncoplot = function(maf, top = 20, genes = NULL, mutsig = NULL, mutsigQval = 0.1, drawRowBar = TRUE, drawColBar = TRUE, includeColBarCN = TRUE, draw_titv = FALSE, logColBar = FALSE,
+oncoplot = function(maf, top = 20, genes = NULL, altered = FALSE, mutsig = NULL, mutsigQval = 0.1, drawRowBar = TRUE, drawColBar = TRUE, includeColBarCN = TRUE, draw_titv = FALSE, logColBar = FALSE,
                      clinicalFeatures = NULL, exprsTbl = NULL, additionalFeature = NULL, additionalFeaturePch = 20, additionalFeatureCol = "white", additionalFeatureCex = 0.9, annotationDat = NULL, annotationColor = NULL, genesToIgnore = NULL,
                      showTumorSampleBarcodes = FALSE, barcode_mar = 4, gene_mar = 5, removeNonMutated = TRUE, fill = TRUE, cohortSize = NULL, colors = NULL,
                      sortByMutation = FALSE, sortByAnnotation = FALSE, numericAnnoCol = NULL, groupAnnotationBySize = TRUE, annotationOrder = NULL, keepGeneOrder = FALSE,
@@ -121,7 +122,11 @@ oncoplot = function(maf, top = 20, genes = NULL, mutsig = NULL, mutsigQval = 0.1
     ms.smg = data.frame(row.names = ms.smg$gene, FDR = ms.smg$FDR)
     ms.smg = ms.smg[rownames(numMat),,drop = FALSE]
   }else { #If user does not provide gene list or MutSig results, draw TOP (default 20) genes
-    genes = getGeneSummary(x = maf)[1:top, Hugo_Symbol]
+    if(altered){
+      genes = getGeneSummary(x = maf)[order(AlteredSamples, decreasing = TRUE)][1:top, Hugo_Symbol]
+    }else{
+      genes = getGeneSummary(x = maf)[1:top, Hugo_Symbol]
+    }
     om = createOncoMatrix(m = maf, g = genes)
     numMat = om$numericMatrix
     mat_origin = om$oncoMatrix
